# g2ui-core

./: .gitignore  CMakeLists.txt  idf_component.yml
assets/fonts/: gui_default_5x7.json
examples/basic/: CMakeLists.txt
examples/basic/main/: app_main.c  project.json
examples/device-parity/: CHECKLIST.md  CMakeLists.txt  README.md
examples/device-parity/main/: CMakeLists.txt  app_main.c  project.json
include/guimintlab/: guimintlab.h
src/gui/core/: gui_assets.c  gui_assets.h  gui_context.c  gui_context.h  gui_types.h  gui_widget.c  gui_widget.h
src/gui/display/: gui_display.c  gui_display.h
src/gui/render/: gui_renderer.c  gui_renderer.h
src/gui/theme/: gui_theme.c
src/gui/widgets/: gui_button.c  gui_button.h  gui_freehand.c  gui_freehand.h  gui_icon.c  gui_label.c  gui_label.h  gui_panel.c  gui_panel.h  gui_shape.c  gui_shape.h
src/internal/: guimintlab_builder.c  guimintlab_builder.h  guimintlab_runtime_internal.h  guimintlab_schema.h
src/loader/: guimintlab_loader.c  guimintlab_loader.h
src/runtime/: guimintlab.c
tools/: build_assets.py  validate_font_assets.py
